# bare-distributable-hello-world

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
src/: main.c  main.js
